--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Todo App</title>
     <link rel="icon" type="image/png" href="../images/favicon.png">
     <link rel="stylesheet" href="style.css">
+    <script src="app.js" defer></script>
 </head>
 
 <body>
